--- a/restsec-samples/report.html
+++ b/restsec-samples/report.html
@@ -27,48 +27,8 @@
 
 <body>
 
-
-
-<!-- Fixed navbar -->
-<!--
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Bootstrap theme</a>
-    </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="#">Separated link</a></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
--->
-
 <div class="container theme-showcase" role="main">
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <h1>RestSec Scan Results</h1>
         <div class="alert alert-info" role="alert">
@@ -83,15 +43,9 @@
         <div class="alert alert-info" role="alert">
             <strong>Scan started:</strong> unknown <br>
             <strong>Scan finished:</strong> unknown <br>
-            <strong>Report generated:</strong> 05 May 2017 - 18:29:10
+            <strong>Report generated:</strong> 11 May 2017 - 11:26:00
         </div>
     </div>
-
-    <!--
-  <div class="page-header">
-    <h1>Alerts</h1>
-  </div>
-    -->
 
         <div class="alert alert-danger" role="alert">
             <strong>Danger!</strong> 2 payload(s) executed successfully.
@@ -115,53 +69,21 @@
                     <tbody>
                     <!-- LOOP THROUGH THE VULNERABILITES FOUND -->
 
-                        aardvark
-                        Barbara
-                        beetroot
-                        whale
-                        zeppelin
+                        <tr>
+                            <td>1</td>
+                                    <td><span class="label label-danger">XSS (alert)</span></td>
+                            <td>http://192.168.99.100:3000/api/Products/1</td>
+                            <td>{"image":"apple_juice.jpg","createdAt":"2016-11-23 11:02:05.000 +00:00","deletedAt":null,"price":1.99,"name":"Apple Juice (1000ml)","description":"Stored XSS (Alert Box) : &lt;script&gt;alert(\"YoU G0t Pwn3d!\")&lt;/script&gt;","id":1,"updatedAt":"2016-11-23 11:02:05.000 +00:00"}</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                                    <td><span class="label label-danger">XSS</span></td>
+                            <td>unknown</td>
+                            <td>unknown</td>
+                            <td>Payload called back: no token found</td>
+                        </tr>
 
-                        vuln_1
-                        vuln_2
-
-                    <tr>
-                        <td>1</td>
-                        <td><span class="label label-danger">XSS (alert)</span></td>
-                        <td>http://192.168.99.100:3000/api/Products/1</td>
-                        <td>{"image":"apple_juice.jpg","createdAt":"2016-11-23 11:02:05.000 +00:00","deletedAt":null,"price":1.99,"name":"Apple Juice (1000ml)","description":"Stored XSS (Alert Box) : <script>alert(\"YoU G0t Pwn3d!\")</script>","id":1,"updatedAt":"2016-11-23 11:02:05.000 +00:00"}</td>
-                        <td>-</td>
-                    </tr>
-
-                    <tr>
-                        <td>2</td>
-                        <td><span class="label label-danger">XSS</span></td>
-                        <td>unknown</td>
-                        <td>unknown</td>
-                        <td>Payload called back: no token found</td>
-                    </tr>
-
-
-                    <tr>
-                        <td>1</td>
-                        <td><span class="label label-danger">Cross-Site Scripting (XSS)</span></td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td><span class="label label-danger">Cross-Site Scripting (XSS)</span></td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td><span class="label label-primary">SQL Injection</span></td>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
-                    </tr>
                     </tbody>
                 </table>
             </div>
