tests don't fail, travis test

--- a/restsec-samples/report.html
+++ b/restsec-samples/report.html
@@ -43,7 +43,7 @@
         <div class="alert alert-info" role="alert">
             <strong>Scan started:</strong> unknown <br>
             <strong>Scan finished:</strong> unknown <br>
-            <strong>Report generated:</strong> 11 May 2017 - 13:39:52
+            <strong>Report generated:</strong> 11 May 2017 - 14:01:59
         </div>
     </div>
 
@@ -71,10 +71,10 @@
 
                         <tr>
                             <td>1</td>
-                                    <td><span class="label label-danger">XSS (alert)</span></td>
-                            <td>http://192.168.99.100:3000/api/Products/1</td>
-                            <td>{"image":"apple_juice.jpg","createdAt":"2016-11-23 11:02:05.000 +00:00","deletedAt":null,"price":1.99,"name":"Apple Juice (1000ml)","description":"Stored XSS (Alert Box) : &lt;script&gt;alert(\"YoU G0t Pwn3d!\")&lt;/script&gt;","id":1,"updatedAt":"2016-11-23 11:02:05.000 +00:00"}</td>
-                            <td>-</td>
+                                    <td><span class="label label-default">vulnType_test</span></td>
+                            <td>endpoint_test</td>
+                            <td>payload_test</td>
+                            <td>comment_test</td>
                         </tr>
                         <tr>
                             <td>1</td>
