--- a/restsec-samples/report.html
+++ b/restsec-samples/report.html
@@ -43,7 +43,7 @@
         <div class="alert alert-info" role="alert">
             <strong>Scan started:</strong> unknown <br>
             <strong>Scan finished:</strong> unknown <br>
-            <strong>Report generated:</strong> 11 May 2017 - 18:05:34
+            <strong>Report generated:</strong> 11 May 2017 - 18:11:27
         </div>
     </div>
 
@@ -55,51 +55,9 @@
 
 
 
-            <div class="alert alert-danger" role="alert">
-                <strong>Warning!</strong> <i>None</i> of the common HTTP Headers used for security are set!
-            </div>
-
-        <div class="page-header">
-            <h1>HTTP Security Headers</h1>
+        <div class="alert alert-success" role="alert">
+            <strong>Success!</strong> All common HTTP Headers used for security are set!
         </div>
-
-        <!-- TRYING TO MAKE THE TABLE RESPONSIVE -->
-
-        <div class="row">
-            <div class="col-md-6">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Vulnerability Type</th>
-                        <th>Endpoint</th>
-                        <th>Header</th>
-                        <th>Comment</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <!-- LOOP THROUGH THE VULNERABILITES FOUND -->
-
-                    <tr>
-                        <td>headers_1</td>
-                                <td><span class="label label-danger">Insecure HTTP Header</span></td>
-                        <td>/</td>
-                        <td><span class="label label-default">Content-Type: myHeader</span></td>
-                        <td>DID NOT reflect invalid header type.</td>
-                    </tr>
-                    <tr>
-                        <td>headers_2</td>
-                                <td><span class="label label-danger">Insecure HTTP Header</span></td>
-                        <td>/</td>
-                        <td><span class="label label-default">Content-Type: myHeader</span></td>
-                        <td>DID NOT reflect invalid header type.</td>
-                    </tr>
-
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
     <!--
           <div class="page-header">
             <h1>Labels</h1>
